# librespot-node

./: .gitignore  README.md  package.json  tsconfig.json
native/: Cargo.toml  index.d.ts
native/src/: lib.rs
native/src/lib/: events.rs  player.rs
src/: index.ts  types.ts
