[package]
name = "librespot-node"
version = "0.1.0"
authors = ["Nadav Tau <nadavt@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "librespot_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.5.0"
tokio-core = "0.1"
log = { version = "^0.4.5", features = ["std"] }
simple-logging = "2.0.1"
futures = "0.1.17"
librespot = "0.1.3" # { path = "/Users/maxisom/Downloads/librespot" }
hex-slice = "0.1.4"
